--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start-api": "json-server --port 3001 --watch --static none data/db.json"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
