--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --modulePathIgnorePatterns=data/ ",
     "eject": "react-scripts eject",
     "start-api": "json-server --port 3001 --watch --static none data/db.json"
   },
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "json-server": "^0.12.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "react-test-renderer": "^16.7.0"
   }
 }
