--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "cypress": "^3.1.5",
     "json-server": "^0.12.2",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.7.0"
