--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --modulePathIgnorePatterns=data/ ",
     "eject": "react-scripts eject",
-    "start-api": "json-server --port 3001 --watch --static none data/db.json"
+    "start-api": "json-server --port 3001 --watch --static none data/db.json",
+    "cy:open": "cypress open"
   },
   "dependencies": {
     "axios": "^0.18.0",
