--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --modulePathIgnorePatterns=data/ ",
+    "test": "cypress open",
     "eject": "react-scripts eject",
     "start-api": "json-server --port 3001 --watch --static none data/db.json",
     "cy:open": "cypress open"
