--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "html-react-parser": "^0.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "cypress": "^3.1.5",
-   "json-server": "^0.12.2",
+    "json-server": "^0.12.2",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.7.0"
   }
