eslint require re-add

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "cypress open",
+    "test": "react-scripts test --modulePathIgnorePatterns=data/ ",
     "eject": "react-scripts eject",
     "start-api": "json-server --port 3001 --watch --static none data/db.json",
     "cy:open": "cypress open"
@@ -18,6 +18,12 @@
   },
   "devDependencies": {
     "cypress": "^3.1.5",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-cypress": "^2.2.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "json-server": "^0.12.2",
     "react-scripts": "^1.1.4",
     "react-test-renderer": "^16.7.0"
